# Horaro-Discord

./: .env.EXAMPLE  .gitignore  README.ja.md  README.md  events.EXAMPLE.csv  main.py  pyproject.toml  requirements.txt
src/: env.py  events.py  fetch_json.py  locales.py
src/dbot/: bot.py  commands.py  notify.py
tests/: dummy_events.py
